# skein

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
app/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: ActivityFeed.tsx  App.tsx  CommandPalette.tsx  FileTree.tsx  LiveContext.tsx  LiveStatus.tsx  LiveTerminal.tsx  ReopenRoomModal.tsx  SettingsModal.tsx  Splitter.tsx  components.tsx  data.tsx  harnessActivity.ts  harnessEvents.ts  harnessPatterns.ts  liveContext.ts  main.tsx  prefs.ts  shortcuts.ts  statusPopover.ts  styles.css  types.ts  useFocusRestore.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.local.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: db.rs  fs.rs  git.rs  harness_action_event.rs  harness_actions_claude.rs  harness_actions_opencode.rs  harness_events_claude.rs  harness_events_opencode.rs  lib.rs  main.rs  pty.rs  resume.rs  watcher.rs
app/src/liveContext/: ActivityCard.tsx  CardStack.tsx  DiffCard.tsx  LiveContext.tsx  PlanCard.tsx  ResultPreview.tsx  RoomSubtitle.tsx  Row.tsx  activity.css  chrome.css  diff.css  diff.ts  feedItems.tsx  index.ts  live-context.css  payload.ts  plan.ts  rows.tsx  store.ts  toolRows.tsx  useGitBranchWatcher.ts  useWorktreeDiff.ts
app/src/preview/: index.ts  registry.ts
app/src/preview/providers/: hex.tsx  image.tsx  markdown.tsx  text.tsx
crates/skein-git/: Cargo.toml
crates/skein-git/src/: lib.rs
crates/skein-git/tests/: repo.rs
crates/skein-proto/: Cargo.toml
crates/skein-proto-gpui/: Cargo.toml
crates/skein-proto-gpui/src/: main.rs
crates/skein-proto-iced/: Cargo.toml
crates/skein-proto-iced/src/: main.rs
crates/skein-proto/src/: main.rs  pty.rs  term.rs  term_colors.rs  term_view.rs
docs/: backlog.md  chapter-2-phase-1.md  chapter-2-plan.md  chapter-3-plan.md  chapter-4-plan.md  chapter-5-plan.md  chapter-5-recon.md  chapter-6-plan.md  chapter-7-plan.md  chapter-7-recon.md  chapter-8-plan.md  epic-50-l2c-2-recon.md  epic-50-l2c-plan.md  live-context-d2-buildmap.md  live-context-design-brief.md  live-context-handover.md  live-context-progress.md  live-context-recon.md  pure-rust-prototype-plan.md  working-prototype-plan.md
docs/design/skein/: README.md
docs/design/skein/chats/: chat1.md
docs/design/skein/project/: .design-canvas.state.json  Live Context Prototype.html  Live Context.html  Skein Prototype.html  Skein.html  lc-proto.jsx  live-context-canvas.jsx  live-context-cards.jsx  live-context-rows.jsx  skein-app.jsx  skein-proto.jsx  skein-shared.jsx
docs/design/skein/project/scraps/: sketch-2026-04-30T15-17-49-zuo9zk.napkin
docs/design/skein/project/uploads/: agent-ide-spec.md
scripts/: local-bundle.sh
