[workspace]
resolver = "2"
members = ["crates/skein-git"]
exclude = ["app/src-tauri"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# git2 stays default-features=false so we don't pull OpenSSL/libssh2 on
# Windows. Skein only operates on local repos for now — re-enable
# `https`/`ssh` when we add remote operations.
git2 = { version = "0.20", default-features = false }
thiserror = "2"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
