[package]
name = "skein-app"
version = "0.1.0"
description = "Skein — agent-first IDE prototype"
authors = ["timeloop-vault"]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "skein_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.34", features = ["bundled"] }
notify-debouncer-mini = "0.6"
skein-git = { path = "../../crates/skein-git" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
