[package]
name = "skein-app"
version = "0.1.0"
description = "Skein — agent-first IDE prototype"
authors = ["timeloop-vault"]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "skein_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Webview devtools (right-click → Inspect Element). Off by default
# so `tauri build` (full-release pipeline) ships without them.
# Enabled by the `npm run tauri:dev` and `npm run tauri:build:local`
# scripts via `--features devtools`.
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.34", features = ["bundled"] }
notify-debouncer-mini = "0.6"
# reqwest is already in the tree transitively (via tauri-plugin-updater);
# making it a direct dep is essentially free at compile time. We use it
# for the opencode `/event` SSE stream — chunked streaming GET against
# localhost. `default-features = false` + `stream` keeps the surface
# minimal (no TLS, no cookies, no gzip — none of which we need for
# 127.0.0.1 plain HTTP).
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
# Already transitive via reqwest+tauri. Direct dep so we can name
# StreamExt for the opencode SSE byte stream.
futures-util = { version = "0.3", default-features = false }
# Reqwest 0.13 + rustls 0.23 requires the crypto provider to be
# explicitly installed at startup. Tauri's transitive feature flags
# leave us with rustls but no default provider installed, so the
# first reqwest::Client::builder().build() panics with "No provider
# set". Pulling rustls as a direct dep with the `ring` feature
# lets us install the default provider during run() — see
# `install_rustls_provider()`. We pick ring over aws-lc-rs because
# ring is already in the lockfile via other transitive deps.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
skein-git = { path = "../../crates/skein-git" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = "0.22"

# `tauri-plugin-notifications` (Choochmeque fork) ships three mutually
# exclusive cfg branches for its Notifications struct:
#   - `desktop && feature="notify-rust"` → cross-platform notify-rust path
#   - `target_os="macos" && !feature="notify-rust"` → native UNUserNotificationCenter
#   - `mobile` → iOS / Android
#
# We disable `notify-rust` on macOS so we get the native Swift bridge
# (notify-rust uses the deprecated NSUserNotificationCenter, which is
# silently broken on Sequoia/Tahoe). But on Linux/Windows that flag
# would leave neither branch active and the crate fails to compile.
# So: macOS skips notify-rust, everything else keeps it.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-notifications = { version = "0.4", default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-notifications = "0.4"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
