[package]
name = "skein-git"
version = "0.1.0"
description = "Local git operations for Skein — worktree, branch, status, diff."
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
git2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
