[package]
name = "skein-proto-iced"
version = "0.1.0"
description = "Iced variant of the pure-Rust Skein prototype (issue #36). Throwaway spike."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
iced = { version = "0.14", features = ["advanced", "tokio"] }
iced_term = "0.8"
skein-git = { path = "../skein-git" }
tokio = { version = "1", features = ["sync"] }
